--- a/webTree/homepage/featuredPosts/index.html
+++ b/webTree/homepage/featuredPosts/index.html
@@ -32,11 +32,11 @@
 
 <body>
     <div class="headMENU">
-        <a href=".." class="logo"> <img src="../../../imgs/nineLOGO.png" alt="[9] certifiedBAKA" width="200px" height="35px" title="（９） 認定されたばか"> </a>
+        <a href="../index.html" class="logo"> <img src="../../../imgs/nineLOGO.png" alt="[9] certifiedBAKA" width="200px" height="35px" title="（９） 認定されたばか"> </a>
         <div class="headMENU-R headMENUalt">
-            <a class="active" href=".." title=">> homePage"> homePage </a>
-            <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about" title=">> aboutPage"> aboutPage </a>
+            <a class="active" href="../index.html" title=">> homePage"> homePage </a>
+            <a href="../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU" title="[ i ] liveSTATUS">
             <p id="headMENUtime" class="headMENUtime"> [dateTime] </p>
@@ -55,7 +55,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href=".."> homePAGE </a> </h1>
+            <h1> <a href="../index.html"> homePAGE </a> </h1>
             <h2 style="padding-left: 65px;"> └────────── featuredPosts </h2>
         </div>
 
@@ -70,164 +70,22 @@
                     <p style="cursor: help;"> <span> <a onclick="quickTXT02()"> [i] table of contents </a> </span> </p>
                     <p style="cursor: help;"> <span> <a onclick="quickTXT03()"> [i] software used </a> </span> </p>
                     <p style="cursor: help;"> <span> <a onclick="quickTXT04()"> [?] who is chiruno </a> </span> </p>
-                    <p> <span> <a href="../404/crash" onclick="audioWARN(); return confirm('[ ? ]  crashThisWebPAGE !!\ndo you really want to proceed ??');"> [!] crash this webpage!</a> </span> </p>
+                    <p> <span> <a href="../404/crash/index.html" onclick="audioWARN(); return confirm('[ ? ]  crashThisWebPAGE !!\ndo you really want to proceed ??');"> [!] crash this webpage!</a> </span> </p>
                 </div>
             </p>
         </div>
 
         <div id="postsBOX">
             <div class="textBORDER" style="float: left; width: 550px;">
-                    <div class="postHEAD paragraphMARGIN">
-                        <p style="color: gray">
-                            <span style="color: cornflowerblue;">
-                                <span class="toolTIP">
-                                    <a href="../../profiles/cumgur" style="color: #ff9e9e;">@cumgur</a>
-                                    <span class="toolTIPtxt" style="margin-left: -50px"> member </span>
-                                </span>
-                            </span> ::  <span class="postDate toolTIP">
-                                                [Dec 07, 2022 : 02:28 AM]
-                                            <span class="toolTIPtxt"> postDate </span>
-                                        </span>
-                        </p>
-                    </div>
-                    <div class="borderLINE" style="float: left; height: 75%;"> </div>
-                    <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
-                        look what I've drew specially for this project!
-                            <span class="mediaPOST"> <br>
-                                <a href="../../../media/postMEDIA/img/cumgur/cumgurP01.jpg" target="_blank" title=">> openIMG">
-                                    <img src="../../../media/postMEDIA/img/cumgur/thumb/cumgurP01_320x204.jpg" loading="lazy" class="mediaROUNDED" style=" width: 250px; vertical-align: top;" alt="cirnoClassJPG">
-                                </a>
-                            </span> <br>
-                    </p>
-                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a onclick="replyPOST04()"> [&gt;] write a comment.. </a> </span> </p>
-                <div id="comments04" class="postBOTTOM paragraphMARGIN" style="display: none;">    <!-- COMMENTS SECTION -->
-                    <p style="color: cornflowerblue" style="float: left;"> [ ... ] comments
-                        <span class="toolTIP toolTIPalt">
-                            <a onclick="hideCOMMENT04()"> <span id="subCOM04X" style="color: tomato">[X]</span> </a> <span class="toolTIPtxt toolTIPtxtALT"> close comments </span>
-                        </span>
-                        <span class="toolTIP" style="margin-left: -9px;">
-                            <a onclick="showCOMMENT04()"> <span id="subCOMshow04" style="color: chartreuse; display: none;">[^]</span> </a> <span class="toolTIPtxt" style="margin-left: -50px;"> restore </span>
-                        </span>
-                    </p>
-                    <div id="subCOM04" class="postCOMMENTS">
-                        <p style="color: gray">
-                            <span style="color: cornflowerblue;">
-                                <span class="toolTIP oneComment">
-                                    <a href="javascript:alert('[ i ]  this user is anonymous ..')">@anonymous</a>
-                                    <span class="toolTIPtxt"> username </span>
-                                </span>
-                            </span> ::  <span class="commentCONTENT toolTIP">
-                                            <a onclick="showREPLY04()" style="color: rgb(150, 150, 150);"> [ .. ] commentTEXT </a>
-                                            <span class="toolTIPtxt"> click to read.. </span>
-                                        </span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="textBORDER" style="float: left; width: 550px;">
                 <div class="postHEAD paragraphMARGIN">
+                    <div class="toolTIP" style="float: right;"> <!-- PINNED TAG -->
+                        <a> <span class="postTagNSFW postTagPINNED" style="float: right;"> PINNED </span> </a>
+                        <span class="toolTIPtxt" style="margin-left: -50px; margin-bottom: 15px;"> pinned post </span> 
+                    </div>
                     <p style="color: gray">
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
-                                <a href="../../profiles/cumgur" style="color: #ff9e9e;">@cumgur</a>
-                                <span class="toolTIPtxt" style="margin-left: -50px"> member </span>
-                            </span>
-                        </span> ::  <span class="postDate toolTIP">
-                                        [Dec 05, 2022 : 03:26 AM]
-                                        <span class="toolTIPtxt"> postDate </span>
-                                    </span>
-                    </p>
-                </div>
-                <div class="borderLINE" style="float: left; height: 75%;"> </div>
-                <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
-                    Hello everyone! <br>
-                    My name is Aika (and my nickname is a2s). <br>
-                    I'm currently 16 and I love drawing. I love seeing Islam's work and his ideas impress me every time. <br> <br>
-                    I like listening to electronic and I like talking to people who are interested in creativity, just like me. <br> <br>
-                    My goal is - I want to become a programmer!
-                </p>
-                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a onclick="replyPOST03()"> [&gt;] write a comment.. </a> </span> </p>
-                <div id="comments03" class="postBOTTOM paragraphMARGIN" style="display: none;">    <!-- COMMENTS SECTION -->
-                    <p style="color: cornflowerblue" style="float: left;"> [ ... ] comments
-                        <span class="toolTIP toolTIPalt">
-                            <a onclick="hideCOMMENT03()"> <span id="subCOM03X" style="color: tomato">[X]</span> </a> <span class="toolTIPtxt toolTIPtxtALT"> close comments </span>
-                        </span>
-                        <span class="toolTIP" style="margin-left: -9px;">
-                            <a onclick="showCOMMENT03()"> <span id="subCOMshow03" style="color: chartreuse; display: none;">[^]</span> </a> <span class="toolTIPtxt" style="margin-left: -50px;"> restore </span>
-                        </span>
-                    </p>
-                    <div id="subCOM03" class="postCOMMENTS">
-                        <p style="color: gray">
-                            <span style="color: cornflowerblue;">
-                                <span class="toolTIP oneComment">
-                                    <a href="javascript:alert('[ i ]  this user is anonymous ..')">@anonymous</a>
-                                    <span class="toolTIPtxt"> username </span>
-                                </span>
-                            </span> ::  <span class="commentCONTENT toolTIP">
-                                            <a onclick="showREPLY03()" style="color: rgb(150, 150, 150);"> [ .. ] commentTEXT </a>
-                                            <span class="toolTIPtxt"> click to read.. </span>
-                                        </span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="textBORDER" style="float: left; width: 550px;">
-                <div class="postHEAD paragraphMARGIN">
-                    <p style="color: gray">
-                        <span style="color: cornflowerblue;">
-                            <span class="toolTIP">
-                                <a href="../../profiles/sub2pew" style="color: aqua;">@sub2pew</a>
-                                <span class="toolTIPtxt" style="margin-left: -55px"> mod-user </span>
-                            </span>
-                        </span> ::  <span class="postDate toolTIP">
-                                            [Dec 05, 2022 : 03:15 AM]
-                                        <span class="toolTIPtxt"> postDate </span>
-                                    </span>
-                    </p>
-                </div>
-                <div class="borderLINE" style="float: left; height: 75%;"> </div>
-                <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
-                    it's been awhile since I started working <br>
-                    on this project... honestly, it's more time <br>
-                    consuming than I have thought.. so yeah... <br> <br>
-                    but I don't going to give up! I will finish <br>
-                    this project and get the maximum score!! <br>
-                    it's going to be so fun and cool!!
-                </p>
-            <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a onclick="replyPOST02()"> [&gt;] write a comment.. </a> </span> </p>
-            <div id="comments02" class="postBOTTOM paragraphMARGIN" style="display: none;">    <!-- COMMENTS SECTION -->
-                <p style="color: cornflowerblue" style="float: left;"> [ ... ] comments
-                    <span class="toolTIP toolTIPalt">
-                        <a onclick="hideCOMMENT02()"> <span id="subCOM02X" style="color: tomato">[X]</span> </a> <span class="toolTIPtxt toolTIPtxtALT"> close comments </span>
-                    </span>
-                    <span class="toolTIP" style="margin-left: -9px;">
-                        <a onclick="showCOMMENT02()"> <span id="subCOMshow02" style="color: chartreuse; display: none;">[^]</span> </a> <span class="toolTIPtxt" style="margin-left: -50px;"> restore </span>
-                    </span>
-                </p>
-                <div id="subCOM02" class="postCOMMENTS">
-                    <p style="color: gray">
-                        <span style="color: cornflowerblue;">
-                            <span class="toolTIP oneComment">
-                                <a href="javascript:alert('[ i ]  this user is anonymous ..')">@anonymous</a>
-                                <span class="toolTIPtxt"> username </span>
-                            </span>
-                        </span> ::  <span class="commentCONTENT toolTIP">
-                                        <a onclick="showREPLY02()" style="color: rgb(150, 150, 150);"> [ .. ] commentTEXT </a>
-                                        <span class="toolTIPtxt"> click to read.. </span>
-                                    </span>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-            <div class="textBORDER" style="float: left; width: 550px;">
-                <div class="postHEAD paragraphMARGIN">
-                    <p style="color: gray">
-                        <span style="color: cornflowerblue;">
-                            <span class="toolTIP">
-                                <a href="../../profiles/sub2pew" style="color: aqua;">@sub2pew</a>
+                                <a href="javascript:window.location.href=window.location.href" style="color: aqua;">@sub2pew</a>
                                 <span class="toolTIPtxt" style="margin-left: -55px"> mod-user </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
@@ -255,31 +113,8 @@
                         steamMAIN&nbsp;&nbsp;::&nbsp;<span><a href="https://steamcommunity.com/profiles/76561198875120471" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">@sub2pew</a></span> <br>
                     </p>
                 </div>
-                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a onclick="replyPOST01()"> [&gt;] write a comment.. </a> </span> </p>
-                <div id="comments01" class="postBOTTOM paragraphMARGIN" style="display: none;">    <!-- COMMENTS SECTION -->
-                    <p style="color: cornflowerblue" style="float: left;"> [ ... ] comments
-                        <span class="toolTIP toolTIPalt">
-                            <a onclick="hideCOMMENT01()"> <span id="subCOM01X" style="color: tomato">[X]</span> </a> <span class="toolTIPtxt toolTIPtxtALT"> close comments </span>
-                        </span>
-                        <span class="toolTIP" style="margin-left: -9px;">
-                            <a onclick="showCOMMENT01()"> <span id="subCOMshow01" style="color: chartreuse; display: none;">[^]</span> </a> <span class="toolTIPtxt" style="margin-left: -50px;"> restore </span>
-                        </span>
-                    </p>
-                    <div id="subCOM01" class="postCOMMENTS">
-                        <p style="color: gray">
-                            <span style="color: cornflowerblue;">
-                                <span class="toolTIP oneComment">
-                                    <a href="javascript:alert('[ i ]  this user is anonymous ..')">@anonymous</a>
-                                    <span class="toolTIPtxt"> username </span>
-                                </span>
-                            </span> ::  <span class="commentCONTENT toolTIP">
-                                            <a onclick="showREPLY01()" style="color: rgb(150, 150, 150);"> [ .. ] commentTEXT </a>
-                                            <span class="toolTIPtxt"> click to read.. </span>
-                                        </span>
-                        </p>
-                    </div>
-                </div>
-            </div>
+                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a href="../../profiles/sub2pew/index.html" target="_blank"> [&gt;] open user profile.. </a> </span> </p>
+            <!-- nextPOST -->
         </div>
     </div>
 </body>
