--- a/webTree/profiles/cumgur/index.html
+++ b/webTree/profiles/cumgur/index.html
@@ -33,11 +33,11 @@
 
 <body>
     <div class="headMENU">
-        <a href=".." class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
+        <a href="../index.html" class="logo"> <img src="../../../imgs/membersBAKA.png" alt="[9] membersBAKA" width="200px" height="35px" title=" ( 9 )  membersBAKA"> </a>
         <div class="headMENU-R headMENUalt">
-            <a href="../../homepage" title=">> homePage"> homePage </a>
-            <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
-            <a href="../../about" title=">> aboutPage"> aboutPage </a>
+            <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
+            <a href="../../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
+            <a href="../../about/index.html" title=">> aboutPage"> aboutPage </a>
         </div>
         <div class="headSubMENU" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD"></div>
@@ -59,7 +59,7 @@
 
     <div class="underMENU">
         <div style="white-space: nowrap">
-            <h1> <a href=".."> profiles </a> </h1>
+            <h1> <a href="../index.html"> profiles </a> </h1>
             <h2 style="padding-left: 65px; padding-bottom: 5px;"> └────────── <a href="javascript:window.location.href=window.location.href"> <span style="color: #ff9e9e"> @cumgur </span> </a> </h2>
             <h3 style="padding-left: 270px;"> └────────── accountPage </h3>
 
@@ -153,7 +153,7 @@
                 </div>
                 <div class="borderLINE" style="float: left; height: 75%;"> </div>
                 <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
-                    Hello everyone! <br>
+                    Hello everyone! <br> <br>
                     My name is Aika (and my nickname is a2s). <br>
                     I'm currently 16 and I love drawing. I love seeing Islam's work and his ideas impress me every time. <br> <br>
                     I like listening to electronic and I like talking to people who are interested in creativity, just like me. <br> <br>
