--- a/webTree/profiles/sub2pew/index.html
+++ b/webTree/profiles/sub2pew/index.html
@@ -65,7 +65,7 @@
 
             <div style="padding: 10px;"> </div>
             
-            <h3 style="padding-left: 25px;"> recently posted posts: </h3>
+            <h3 style="padding-left: 25px;"> recently submitted posts: </h3>
             <h4 style="color: rgb(120, 120, 120); padding: 0px; padding-left: 365px; margin-top: -10px; position: absolute; opacity: 50%;"> last seen: [Dec 06, 2022] </h4>
         </div>
 
