--- a/webTree/profiles/sub2pew/index.html
+++ b/webTree/profiles/sub2pew/index.html
@@ -66,7 +66,7 @@
             <div style="padding: 10px;"> </div>
             
             <h3 style="padding-left: 25px;"> recently submitted posts: </h3>
-            <h4 style="color: rgb(120, 120, 120); padding: 0px; padding-left: 365px; margin-top: -10px; position: absolute; opacity: 50%;"> last seen: [Dec 06, 2022] </h4>
+            <h4 style="color: rgb(120, 120, 120); padding: 0px; padding-left: 365px; margin-top: -10px; position: absolute; opacity: 50%;"> last seen: [Dec 13, 2022] </h4>
         </div>
 
         <!-- ADD SPACE BETWEEN <H4> AND POSTS SECTION -->
@@ -93,11 +93,11 @@
                         <p style="color: gray">
                             <span style="color: cornflowerblue;">
                                 <span class="toolTIP">
-                                    <a href="javascript:window.location.href=window.location.href" style="color: aliceblue;">@template</a>
-                                    <span class="toolTIPtxt" style="margin-left: -50px"> mod-user </span>
+                                    <a href="javascript:window.location.href=window.location.href" style="color: aqua;">@sub2pew</a>
+                                    <span class="toolTIPtxt" style="margin-left: -55px"> mod-user </span>
                                 </span>
                             </span> ::  <span class="postDate toolTIP">
-                                                [MMM DD, YYYY : HH:MM AM/PM]
+                                                [Dec 13, 2022 : 10:30 PM]
                                             <span class="toolTIPtxt"> postDate </span>
                                         </span>
                         </p>
