--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="5; url=webTree/homepage" />
+    <!-- <meta http-equiv="refresh" content="5; url=webTree/homepage/index.html" /> -->
     
     <title> [ i ] Redirecting... </title>
 
     <style>
+        @media screen and (max-width: 412px) {
+            p {
+                font-size: 15px;
+            }
+        }
+
         * {
             margin: 25px;
         }
@@ -25,6 +31,6 @@
 </head>
 <body>
     <p> auto redirect in 5 seconds ... </p>
-    <p><a href="webTree/homepage" style="color: cadetblue;">&gt;&gt; Redirect manually ...</a></p>
+    <p><a href="webTree/homepage/index.html" style="color: cadetblue;">&gt;&gt; Redirect manually ...</a></p>
 </body>
 </html>
