--- a/webTree/funstuff/imagesGIFs/index.html
+++ b/webTree/funstuff/imagesGIFs/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title> images & GIFs </title>
 
     <link rel="stylesheet" href="../../../style/mainStyle.css" type="text/css">
@@ -90,7 +91,7 @@
 
 <body>
     <div class="headMENU">
-        <a href="javascript:alert('[ i ]  have some fun browsing here ! ~')" class="logo"> <img src="../../../imgs/funLOGO.png" alt="[9] funSTUFF" width="200px" height="35px" title="funSTUFF"> </a>
+        <a href="../index.html" class="logo"> <img src="../../../imgs/funLOGO.png" alt="[9] funSTUFF" width="200px" height="35px" title="funSTUFF"> </a>
         <div class="headMENU-R headMENUalt">
             <a href="../../homepage/index.html" title=">> homePage"> homePage </a>
             <a class="active" href="../index.html" title=">> funSTUFF"> funSTUFF </a>
@@ -174,6 +175,10 @@
 
                             <a href="../../../media/images/anime/tumblr_7ebed723e8865100296c94f3d7671315_7689d7e8_540.jpg" target="_blank" title=">> openIMG">
                                 <img src="../../../media/images/anime/thumb/tumblr_7ebed723e8865100296c94f3d7671315_7689d7e8_540_320x480.jpg" loading="lazy" class="mediaROUNDED" style="vertical-align: top; object-position: 50% 40%" alt="tumblr_7ebed723e8865100296c94f3d7671315_7689d7e8_540.jpg">
+                            </a>
+
+                            <a href="../../../media/images/anime/62371e7f8eff5.jpg" target="_blank" title=">> openIMG">
+                                <img src="../../../media/images/anime/thumb/62371e7f8eff5_320x458.jpg" loading="lazy" class="mediaROUNDED" style="vertical-align: top; object-position: 50% 20%" alt="62371e7f8eff5.jpg">
                             </a>
                         </span> <br>
                     </p>
