--- a/webTree/homepage/featuredPosts/index.html
+++ b/webTree/homepage/featuredPosts/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title> featuredPosts </title>
 
     <link rel="stylesheet" href="../../../style/mainStyle.css" type="text/css">
@@ -85,7 +86,7 @@
                     <p style="color: gray">
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
-                                <a href="javascript:window.location.href=window.location.href" style="color: aqua;">@sub2pew</a>
+                                <a href="../../profiles/sub2pew/index.html" style="color: aqua;">@sub2pew</a>
                                 <span class="toolTIPtxt" style="margin-left: -55px"> mod-user </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
@@ -114,7 +115,34 @@
                     </p>
                 </div>
                 <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a href="../../profiles/sub2pew/index.html" target="_blank"> [&gt;] open user profile.. </a> </span> </p>
-            <!-- nextPOST -->
+            </div>
+            
+            <div class="textBORDER" style="float: left; width: 550px;">
+                <div class="postHEAD paragraphMARGIN">
+                    <p style="color: gray">
+                        <span style="color: cornflowerblue;">
+                            <span class="toolTIP">
+                                <a href="../../profiles/cumgur/index.html" style="color: #ff9e9e;">@cumgur</a>
+                                <span class="toolTIPtxt" style="margin-left: -50px"> member </span>
+                            </span>
+                        </span> ::  <span class="postDate toolTIP">
+                                        [Dec 05, 2022 : 03:26 AM]
+                                        <span class="toolTIPtxt"> postDate </span>
+                                    </span>
+                    </p>
+                </div>
+                <div class="borderLINE" style="float: left; height: 75%;"> </div>
+                <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
+                    Hello everyone! <br> <br>
+                    My name is Aika (and my nickname is a2s). <br>
+                    I'm currently 16 and I love drawing. I love seeing Islam's work and his ideas impress me every time. <br> <br>
+                    I like listening to electronic and I like talking to people who are interested in creativity, just like me. <br> <br>
+                    My goal is - I want to become a programmer!
+                </p>
+                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a href="../../profiles/cumgur/index.html" target="_blank"> [&gt;] open user profile.. </a> </span> </p>
+            </div>
+
+            <!-- newPOST -->
         </div>
     </div>
 </body>
