--- a/webTree/profiles/sub2pew/index.html
+++ b/webTree/profiles/sub2pew/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title> @sub2pew </title>
 
     <link rel="stylesheet" href="../../../style/mainStyle.css" type="text/css">
@@ -288,6 +289,8 @@
                 </span>
                 </p>
             </div>
+
+            <!-- newPOST -->
         </div>
     </div>
 </body>
