--- a/webTree/homepage/index.html
+++ b/webTree/homepage/index.html
@@ -54,11 +54,11 @@
             }
 
             .button01 {
-                margin-left: 150px !important;
+                margin-left: 125px !important;
             }
 
             .button02 {
-                margin-left: -100px !important;
+                margin-left: -125px !important;
             }
         }
 
@@ -74,6 +74,10 @@
                 display: block;
                 margin-top: 0% !important;
                 left: 0% !important; right: 95% !important;
+            }
+
+            .titleTXT {
+                margin-right: 25px !important;
             }
 
             .button01 {
@@ -134,7 +138,7 @@
     <div class="headMENU">
         <a href="javascript:alert('[ i ]  the homepage of this entire project !')" class="logo"> <img src="../../imgs/nineLOGO.png" alt="[9] certifiedBAKA" width="200px" height="35px" title="（９） 認定されたばか"> </a>
         <div class="headMENU-R headMENUalt">
-            <a class="homeNotice" href="javascript:alert('[ ! ]  it is recommended to use the following settings:\nwebBrowser :: Google Chrome 108.0.5359.99 or later versions.\n\nadditionalNotes :: this website may not display correctly on mobile devices or other devices with small screen, so make sure to use desktop or tablet instead !!')" style="margin-right: 50px;" title="[ i ]  click to read ..."> [!] importantNotice </a>
+            <!-- <a class="homeNotice" href="javascript:alert('[ ! ]  it is recommended to use the following settings:\nwebBrowser :: Google Chrome 108.0.5359.99 or later versions.\n\nadditionalNotes :: this website may not display correctly on mobile devices or other devices with small screen, so make sure to use desktop or tablet instead !!')" style="margin-right: 50px;" title="[ i ]  click to read ..."> [!] importantNotice </a> -->
             <a class="active" href="javascript:alert('[ i ]  you are currently on this subpage !!')" title="[ i ] you are here"> homePage </a>
             <a href="../../webTree/funstuff/index.html" title=">> funSTUFF"> funSTUFF </a>
             <a href="../about/index.html" title=">> aboutPage"> aboutPage </a>
@@ -160,7 +164,7 @@
     </div>
 
     <div class="underMENU centerDIV">
-        <div style="white-space: nowrap; text-align: center;">
+        <div class="titleTXT" style="white-space: nowrap; text-align: center;">
             <h1 style="color: cornflowerblue;"> the homepage of [9] certifiedBAKA </h1>
             <h2 style="padding-top: 15px;"> choose category from the header or select one below .. </h2>
         </div>
@@ -169,6 +173,10 @@
             <a href="featuredPosts/index.html"> <button class="buttonNAV button01" style="position: absolute; margin-left: 175px;"> featuredPosts </button> </a>
             <a href="../profiles/index.html"><button class="buttonNAV button02" style="position: absolute; margin-left: -175px;"> membersBAKA </button> </a> 
         </div>
+    </div>
+
+    <div class="homeNotice">
+        <a href="javascript:alert('[ ! ]  it is recommended to use the following settings:\nwebBrowser :: Google Chrome 108.0.5359.99 or later versions.\n\nadditionalNotes :: this website may not display correctly on mobile devices or other devices with small screen, so make sure to use desktop or tablet instead !!')" title="[ i ]  click to read ..."> [!] importantNotice </a>
     </div>
 </body>
 </html>
